--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
     "compilerOptions": {
         "types": [
             "node",
-            "webdriverio/async",
+            "webdriverio/sync",
             "@wdio/mocha-framework",
             "expect-webdriverio"
         ],
-        "target": "ES5"
+        "target": "ES2020"
     }
 }
