--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@wdio/cli": "^7.16.10"
   },
   "devDependencies": {
+    "@types/mocha": "^9.0.0",
     "@wdio/local-runner": "^7.16.10",
     "@wdio/mocha-framework": "^7.16.6",
     "@wdio/spec-reporter": "^7.16.9",
